# cpp-regex

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  conanfile.txt  main.cpp  provision.sh
include/: textcalc.hpp
src/: textcalc.cpp
tests/unit/: test.cpp
